# axapp-plat-dyn

./: Cargo.toml  build.rs  run.sh
src/: main.rs
