[package]
edition = "2024"
name = "app-plat-dyn"
version = "0.1.0"

[dependencies]
axplat-aarch64-dyn = {path = "/home/zhourui/arceos/axplat-aarch64-dyn", features = ["irq", "smp", "hv"]}
axstd = {path = "/home/zhourui/arceos/arceos-plt-dyn/ulib/axstd", features = ["alloc", "paging", "irq", "multitask", "page-alloc-4g"]}


